# mootools

./: .pre-commit-config.yaml  README.md  TODO  moocore-0.0.9999-py3-none-macosx_10_9_universal2.whl  moocore-0.0.9999-py3-none-macosx_10_9_x86_64.whl  moocore-0.0.9999-py3-none-macosx_11_0_arm64.whl  moocore-0.0.9999-py3-none-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  moocore-0.0.9999-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  moocore-0.0.9999-py3-none-musllinux_1_1_x86_64.whl  moocore-0.0.9999-py3-none-win_amd64.whl
.github/workflows/: C.yaml  C.yml  R.yaml  R.yml  c.yaml  python.yaml  python.yml
R/: DESCRIPTION  Makefile  NAMESPACE  README.md  _pkgdown.yml
R/R/: eaf.R  hv.R  igd.R  interactive.R  moocore-package.R  nondominated.R  normalise.R  read_datasets.R  utils.R  vorob.R  whv.R
R/man/: Vorob.Rd  attsurf2df.Rd  eafdiff.Rd  eafs.Rd  hv_contributions.Rd  igd.Rd  moocore-package.Rd
R/src/: Makevars.in  Makevars.win  Rmoocore.c  init.c
R/tests/testthat/: test-eaf.R
moocore/: index.html  moocore-0.0.9999-py3-none-macosx_10_9_universal2.whl  moocore-0.0.9999-py3-none-macosx_10_9_x86_64.whl  moocore-0.0.9999-py3-none-macosx_11_0_arm64.whl  moocore-0.0.9999-py3-none-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  moocore-0.0.9999-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  moocore-0.0.9999-py3-none-musllinux_1_1_x86_64.whl  moocore-0.0.9999-py3-none-win_amd64.whl
python/: .buildinfo  Makefile  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.py  tox.ini
python/_modules/: index.html
python/_modules/moocore/: _moocore.html  moocore.html
python/_sources/: index.rst.txt
python/_sources/api/: index.rst.txt
python/api/: index.html  moocore.html  moocore.moocore.html
python/doc/: REFERENCES.bib  conf.py  conftest.py
python/doc/api/: moocore.moocore.rst  moocore.rst
python/doc/examples/: CPFs.txt  index.rst  metrics.md
python/examples/: index.html  metrics.html
python/reference/: functions.dominance.html  functions.eaf.html  functions.html  functions.io.html  functions.metrics.html  index.html
python/src/moocore/: __init__.py  _ffi_build.py  _moocore.py  _utils.py  build_c_moocore.py  conftest.py  libmoocore.h  moocore.py
python/tests/: test_eaf.py  test_moocore.py
r/: 404.html  DESCRIPTION  Makefile  NAMESPACE  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
r/R/: check.R  eaf.R  eafdiff.R  epsilon.R  hv.R  igd.R  interactive.R  largest_eafdiff.R  moocore-package.R  nondominated.R  normalise.R  read_datasets.R  utils.R  vorob.R  whv.R
r/inst/: REFERENCES.bib  WORDLIST
r/man/: HybridGA.Rd  Vorob.Rd  as_double_matrix.Rd  attsurf2df.Rd  choose_eafdiff.Rd  compute_eaf_call.Rd  compute_eafdiff_call.Rd  eaf_as_list.Rd  eafdiff.Rd  eafs.Rd  epsilon.Rd  gcp2x2.Rd  igd.Rd  largest_eafdiff.Rd  matrix_maximise.Rd  nondominated.Rd  rbind_datasets.Rd  read_datasets.Rd  whv_rect.Rd  write_datasets.Rd
r/news/: index.html
r/reference/: CPFs.html  HybridGA.html  SPEA2minstoptimeRichmond.html  SPEA2relativeRichmond.html  SPEA2relativeVanzyl.html  Vorob.html  as_double_matrix.html  attsurf2df.html  choose_eafdiff.html  compute_eaf_call.html  compute_eafdiff_call.html  eaf.html  eaf_as_list.html  eafdiff.html  eafs.html  epsilon.html  gcp2x2.html  hv_contributions.html  hypervolume.html  igd.html  index.html  largest_eafdiff.html  matrix_maximise.html  moocore-package.html  nondominated.html  normalise.html  rbind_datasets.html  read_datasets.html  tpls50x20_1_MWT.html  transform_maximise.html  whv_hype.html  whv_rect.html  write_datasets.html
r/src/: Rcommon.h  Rmoocore.c
r/tests/testthat/: DTLZDiscontinuousShape.3d.front.1000pts.10.rda  helper-common.R  test-doctest-eafdiff.R  test-doctest-vorobT.R  test-eaf.R  test-epsilon.R  test-hv.R  test-igd.R  test-normalise.R  test-pareto-rank.R  test-vorob.R  test-whv.R  test-whv_hype.R
src/: .gitignore  Hypervolume_MEX.c  Makefile  bit_array.h  cmdline.h  common.h  configure  configure.ac  dominatedsets.c  eaf.c  eaf.h  eaf3d.c  eaf_main.c  epsilon.c  epsilon.h  gcc_attribs.h  getrusage.c  gitversion.mk  hv.c  hv.h  hv_contrib.c  igd.c  igd.h  io.c  io.h  io_priv.h  libhv.mk  libutil.c  main-hv.c  ndsort.c  nondominated.c  nondominated.h  timer.c  whv.c
testsuite/: regtest.py
