[build-system]
requires = ["setuptools>=42","cffi>=1.15.1"]
build-backend = "setuptools.build_meta"

[project]
name = "moocore"
version = "0.0.9999"
authors = [
  { name="Fergus Rooney", email="fergus.rooney@outlook.com" }, {name = "Manuel López-Ibáñez", email = "manuel.lopez-ibanez@manchester.ac.uk"}
]
description = "Core Algorithms for Multi-Objective Optimization"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "cffi >=1.15.1",
  "numpy >= 1.22.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://auto-optimization.github.io/moocore/"
Documentation = "https://auto-optimization.github.io/moocore/"
Source = "https://github.com/auto-optimization/moocore/"
Tracker = "https://github.com/auto-optimization/moocore/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [ "src" ]
testpaths = [ "tests" ]

[tool.cibuildwheel]
skip = ["pp*", "*-musllinux_aarch64", "cp38-musllinux_x86_64"]
build-verbosity = 2
# Change import-mode to ensure we test against installed package, not local project
test-requires = "pytest"
test-command = "pytest -v {project}/python/tests --import-mode=append --doctest-modules --ignore-glob='*generate-expected-output.py'"
# skip tests on cp38-macosx_x86_64 because of https://github.com/catboost/catboost/issues/2371
# skip tests on emulated architectures, as they are very slow
# skip tests on *-macosx_arm64 , as cibuildwheel does not support tests on arm64 (yet)
# skip tests on *-musllinux*" since llvmlite and numba do not provide musllinux wheels
test-skip = "cp38-macosx_x86_64 *-*linux_{aarch64,ppc64le,s390x} *-macosx_arm64 *-musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "auto"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]
